<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/go_to_shop_from_instructions"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instructions_tv_one"
        style="@style/instructions_tv_style"
        android:text="@string/instructions_set_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructiosn_imgvw" />

    <TextView
        android:id="@+id/instructions_tv_two"
        style="@style/instructions_tv_style"
        android:text="@string/instructions_set_two"
        android:layout_marginTop="@dimen/margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_tv_one" />

    <ImageView
        android:id="@+id/instructiosn_imgvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instructions_img_vw" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>